<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">
    <Button
        android:id="@+id/red_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/red600"
        android:text="@string/red_button"/>

    <Button
        android:id="@+id/orange_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/orange600"
        android:layout_below="@+id/red_button"
        android:layout_toEndOf="@+id/red_button"
        android:text="@string/orange_button"/>

    <Button
        android:id="@+id/yellow_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/yellow600"
        android:layout_below="@+id/orange_button"
        android:layout_toEndOf="@+id/orange_button"
        android:text="@string/yellow_button"/>

    <Button
        android:id="@+id/green_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/green600"
        android:layout_below="@+id/yellow_button"
        android:layout_toEndOf="@+id/yellow_button"
        android:text="@string/green_button"/>

    <Button
        android:id="@+id/blue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/blue600"
        android:layout_below="@+id/green_button"
        android:layout_toStartOf="@+id/green_button"
        android:text="@string/blue_button"/>

    <Button
        android:id="@+id/indigo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/indigo600"
        android:layout_below="@+id/blue_button"
        android:layout_toStartOf="@+id/blue_button"
        android:text="@string/indigo_button"/>

    <Button
        android:id="@+id/pink_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/pink600"
        android:layout_below="@+id/indigo_button"
        android:text="@string/pink_button"/>


</RelativeLayout>